<resources>
    <string name="app_name">Task App</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_app_drawer">AppDrawer</string>
    <string name="navigation_drawer_open">Open menu</string>
    <string name="navigation_drawer_close">Close menu</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_tasks">Tasks</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_habits">Habits</string>

    <string-array name="habit_spinner_items">
        <item>Select a Habit type</item> <!-- Placeholder item -->
        <item>Counter Habit</item>
        <item>Step Counter Habit</item>
    </string-array>

    <string name="tasks_id">1</string>
    <string name="schedule_id">2</string>
    <string name="habits_id">3</string>
    <string name="tasks_name">Task</string>
    <string name="schedule_name">Schedule</string>
    <string name="habits_name">Habit</string>

    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="themes_header">Themes</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Dark Mode Preferences -->
    <string name="Dark_Mode_title">Dark Mode</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Extras Preferences -->
    <string name="Extras">Extra Settings</string>
    <string name="stepCounterSensor">StepCounter</string>

</resources>